--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.google.firebase:firebase-database:16.0.4'
-    implementation 'com.google.firebase:firebase-core:16.0.4'
-    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+
+    implementation 'com.google.firebase:firebase-firestore:17.1.3'
+
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
     implementation "org.jetbrains.anko:anko:${anko_version}"
 
