--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
